new_tests/semantics/scope/bad/001_LD2.cm

def a:Int = 3 + a 
